# LVM_Kinova_gen2_Grasp

./: .gitignore  CLAUDE.md  LICENSE  README.md  config_template.py  python_script_monitor.py  requirements.txt
Kinova_ws/src/kinova-ros/kinova_bringup/launch/: kinova_robot.launch
Kinova_ws/src/kinova-ros/kinova_demo/nodes/kinova_demo/: fingers_action_client.py  pose_action_client.py
Kinova_ws/src/kinova-ros/kinova_driver/include/kinova_driver/: kinova_arm.h
Kinova_ws/src/kinova-ros/kinova_driver/src/: kinova_arm.cpp
Kinova_ws/src/kinova-ros/kinova_driver/src/nodes/: kinova_arm_driver.cpp
Kinova_ws/src/kinova-ros/sim_grasp/: CMakeLists.txt  package.xml
Kinova_ws/src/kinova-ros/sim_grasp/launch/: sim_grasp_kinova.launch  sim_grasp_robotiq.launch  test_grasp.launch
Kinova_ws/src/kinova-ros/sim_grasp/msg/: sim_graspModel.msg
Kinova_ws/src/kinova-ros/sim_grasp/scripts/: grasp_detect.py  sgdn.py
Kinova_ws/src/kinova-ros/sim_grasp/scripts/ckpt/: epoch_0006_acc_0.1964_.pth  epoch_0064_acc_0.1957_.pth
Kinova_ws/src/kinova-ros/sim_grasp/scripts/ckpt/0.99/: epoch_0536_acc_0.7700_.pth  epoch_1266_acc_0.7933.pth
Kinova_ws/src/kinova-ros/sim_grasp/scripts/ckpt/16-inpaint/: epoch_0041_acc_0.5571_.pth  epoch_0234_acc_0.6788.pth  epoch_0414_acc_0.6469.pth
Kinova_ws/src/kinova-ros/sim_grasp/scripts/ckpt/16_1_09/: epoch_0420_acc_0.8280.pth
Kinova_ws/src/kinova-ros/sim_grasp/scripts/ckpt/16_1_09_width20/: epoch_0615_acc_0.8801.pth
Kinova_ws/src/kinova-ros/sim_grasp/scripts/ckpt/211219_1215_fl0.99_newNoise/: epoch_0000_acc_0.4933.pth  epoch_0001_acc_0.6167.pth  epoch_0002_acc_0.6800.pth  epoch_0003_acc_0.7133.pth  epoch_0004_acc_0.7600.pth  epoch_0007_acc_0.7767.pth  epoch_0009_acc_0.8300.pth  epoch_0030_acc_0.8333.pth  epoch_0034_acc_0.8600.pth  epoch_0045_acc_0.8200_.pth  epoch_0046_acc_0.8133_.pth  epoch_0047_acc_0.8267_.pth
Kinova_ws/src/kinova-ros/sim_grasp/scripts/models/: __init__.py  common.py  ggcnn2.py  loss.py
Kinova_ws/src/kinova-ros/sim_grasp/src/: invmat.py  sim_arm_grasp_kinova.cpp  sim_arm_grasp_robotiq.cpp
qianwenVLmax_api/: box_destination.txt  gpt4v2.py  huaweicloud_sis.log.1  old_grasp.py  qinwen_Grasp.py  qinwen_Grasp_advaced.py  qinwen_vl_max_test.py  qwenapi.txt  test_qinawenVL.py  whisper_live_test.py
